--- a/app/src/main/res/layouts/stampcard/layout/stamp_card_template.xml
+++ b/app/src/main/res/layouts/stampcard/layout/stamp_card_template.xml
@@ -86,25 +86,30 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
                 android:layout_weight="1"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:text="@string/stampcard_time"
-                android:textSize="@dimen/textview_middle_size"/>
+                android:textSize="@dimen/textview_big_0_size" />
 
             <android.support.design.widget.TextInputEditText
+                android:id="@+id/stampcard_time_input"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="2"
+                android:gravity="center_horizontal"
+                android:layout_weight="4"
                 android:inputType="number" />
 
-            <ImageButton
-                android:id="@+id/stampcard_time_edit_button"
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
                 android:layout_weight="1"
-                android:src="@drawable/stampcard_parameter_edit"
-                android:background="@null" />
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:text="@string/stampcard_time_minutes"
+                android:textSize="@dimen/textview_big_0_size" />
 
         </LinearLayout>
 
@@ -125,6 +130,7 @@
                 android:src="@drawable/stampcard_alarm" />
 
             <ToggleButton
+                android:id="@+id/stampcard_alarm_status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintLeft_toRightOf="@id/stampcard_alarm_icon"
@@ -133,10 +139,12 @@
         </LinearLayout>
 
         <Button
+            android:id="@+id/stampcard_submit_button"
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
             android:background="@drawable/functional_button"
-            android:text="@string/stampcard_set"/>
+            android:text="@string/stampcard_set"
+            android:textSize="@dimen/textview_big_0_size"/>
 
     </LinearLayout>
 
