--- a/app/src/main/res/layouts/main/layout/main_fragment_home.xml
+++ b/app/src/main/res/layouts/main/layout/main_fragment_home.xml
@@ -86,31 +86,13 @@
             android:layout_marginHorizontal="10dp"
             android:layout_marginBottom="10dp">
 
-            <LinearLayout
+            <TableLayout
                 android:id="@+id/habit_container"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-<!--                <LinearLayout-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:orientation="horizontal">-->
-
-<!--                    <TextView android:layout_height="wrap_content"-->
-<!--                        android:layout_width="fill_parent"-->
-<!--                        android:background="@drawable/item_habit"-->
-<!--                        android:text=""-->
-
-<!--                        android:gravity="center" />-->
-
-<!--                    <ImageButton-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content" />-->
-
-<!--                </LinearLayout>-->
-
-            </LinearLayout>
+            </TableLayout>
 
         </LinearLayout>
 
