--- a/app/src/main/res/layouts/main/layout/main_fragment_home.xml
+++ b/app/src/main/res/layouts/main/layout/main_fragment_home.xml
@@ -51,7 +51,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:adjustViewBounds="true"
-            android:background="@drawable/dog_sad"
+            android:src="@null"
             android:scaleType="fitXY"
             app:layout_constraintDimensionRatio="H,1:1"
 
