--- a/app/src/main/res/layouts/onboarding/layout/ob_instruction_3.xml
+++ b/app/src/main/res/layouts/onboarding/layout/ob_instruction_3.xml
@@ -1,41 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center"
     >
 
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/image_container"
-        android:layout_width="match_parent"
+    <ImageView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="30dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp">
-
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintDimensionRatio="H,1:1"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-
-            android:background="@drawable/onboarding_dog_skinned"
-            android:scaleType="fitXY"
-            android:adjustViewBounds="true"/>
-
-    </android.support.constraint.ConstraintLayout>
+        android:adjustViewBounds="true"
+        android:src="@drawable/onboarding_dog_skinned" />
 
     <TextView
         android:id="@+id/onboarding_instruction_3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/image_container"
         android:layout_margin="20dp"
         android:layout_marginTop="20dp"
 
         android:text="Unlock exclusive animations and outfits for Ollie by consistently completing your habits."
         android:textSize="18sp" />
 
-</RelativeLayout>
+</LinearLayout>
