--- a/app/src/main/res/layouts/onboarding/layout/ob_instruction_4.xml
+++ b/app/src/main/res/layouts/onboarding/layout/ob_instruction_4.xml
@@ -1,38 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center"
     >
 
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/image_container"
-        android:layout_width="match_parent"
+    <ImageView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="30dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp">
-
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintDimensionRatio="H,1:1"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-
-
-            android:background="@drawable/briller_logo"
-            android:scaleType="fitXY"
-            android:adjustViewBounds="true"/>
-
-    </android.support.constraint.ConstraintLayout>
+        android:src="@drawable/briller_logo" />
 
     <TextView
         android:id="@+id/onboarding_instruction_4_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/image_container"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="20dp"
@@ -60,4 +43,4 @@
         android:text="@string/onboarding_instruction_finish"
         />
 
-</RelativeLayout>
+</LinearLayout>
