--- a/app/src/main/res/layouts/main/layout/main_fragment_stats.xml
+++ b/app/src/main/res/layouts/main/layout/main_fragment_stats.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:layout_marginBottom="10dp"
-        android:layout_marginHorizontal="30dp">
+        android:layout_marginHorizontal="10dp">
         
         <LinearLayout
             android:layout_width="0dp"
@@ -36,6 +36,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/habit_physique_gym"
+                android:tag="@string/habit_physique_gym"
                 android:background="@null"
                 android:scaleType="fitXY"
                 android:adjustViewBounds="true"
@@ -45,6 +46,8 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/habit_physique_gym"
+                android:textSize="@dimen/textview_small_size"
+                android:maxLines="1"
                 />
         </LinearLayout>
 
@@ -61,6 +64,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/habit_physique_run"
+                android:tag="@string/habit_physique_run"
                 android:background="@null"
                 android:scaleType="fitXY"
                 android:adjustViewBounds="true"
@@ -70,6 +74,8 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/habit_physique_run"
+                android:textSize="@dimen/textview_small_size"
+                android:maxLines="1"
                 />
         </LinearLayout>
 
@@ -86,6 +92,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/habit_physique_pushup"
+                android:tag="@string/habit_physique_pushup"
                 android:background="@null"
                 android:scaleType="fitXY"
                 android:adjustViewBounds="true"
@@ -95,6 +102,8 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/habit_physique_pushup"
+                android:textSize="@dimen/textview_small_size"
+                android:maxLines="1"
                 />
         </LinearLayout>
 
@@ -110,6 +119,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/habit_physique_squat"
+                android:tag="@string/habit_physique_squat"
                 android:background="@null"
                 android:scaleType="fitXY"
                 android:adjustViewBounds="true"
@@ -119,6 +129,8 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/habit_physique_squat"
+                android:textSize="@dimen/textview_small_size"
+                android:maxLines="1"
                 />
         </LinearLayout>
 
@@ -127,7 +139,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="30dp">
+        android:layout_marginHorizontal="10dp">
 
         <LinearLayout
             android:layout_width="0dp"
@@ -142,6 +154,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/habit_mind_meditate"
+                android:tag="@string/habit_mind_meditate"
                 android:background="@null"
                 android:scaleType="fitXY"
                 android:adjustViewBounds="true"
@@ -151,6 +164,8 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/habit_mind_meditate"
+                android:textSize="@dimen/textview_small_size"
+                android:maxLines="1"
                 />
         </LinearLayout>
 
@@ -167,6 +182,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/habit_mind_read"
+                android:tag="@string/habit_mind_read"
                 android:background="@null"
                 android:scaleType="fitXY"
                 android:adjustViewBounds="true"
@@ -176,6 +192,8 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/habit_mind_read"
+                android:textSize="@dimen/textview_small_size"
+                android:maxLines="1"
                 />
         </LinearLayout>
 
@@ -192,6 +210,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/habit_mind_journal"
+                android:tag="@string/habit_mind_journal"
                 android:background="@null"
                 android:scaleType="fitXY"
                 android:adjustViewBounds="true"
@@ -201,6 +220,8 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/habit_mind_journal"
+                android:textSize="@dimen/textview_small_size"
+                android:maxLines="1"
                 />
         </LinearLayout>
 
@@ -216,6 +237,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/habit_mind_study"
+                android:tag="@string/habit_mind_study"
                 android:background="@null"
                 android:scaleType="fitXY"
                 android:adjustViewBounds="true"
@@ -225,6 +247,8 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/habit_mind_study"
+                android:textSize="@dimen/textview_small_size"
+                android:maxLines="1"
                 />
         </LinearLayout>
 
@@ -240,49 +264,52 @@
             android:layout_height="match_parent"
             android:gravity="center">
 
-            <TextView
+            <TextView android:text="1"
+                android:id="@+id/stampcard_day0"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_column="1"
-                android:background="@drawable/item_stats"
-                android:text=" M " />
+                android:layout_marginRight="5dp"
+                android:background="@drawable/item_stats" />
 
-            <TextView android:text=" T "
+            <TextView android:text="2"
+                android:id="@+id/stampcard_day1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_column="2"
-                android:background="@drawable/item_stats"
-                />
+                android:layout_marginRight="5dp"
+                android:background="@drawable/item_stats" />
 
-            <TextView android:text=" W "
+            <TextView android:text="3"
+                android:id="@+id/stampcard_day2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_column="3"
-                android:background="@drawable/item_stats"/>
+                android:layout_marginRight="5dp"
+                android:background="@drawable/item_stats" />
 
-
-            <TextView android:text=" R "
+            <TextView android:text="4"
+                android:id="@+id/stampcard_day3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_column="4"
-                android:background="@drawable/item_stats"/>
+                android:layout_marginRight="5dp"
+                android:background="@drawable/item_stats" />
 
-            <TextView android:text=" F "
+            <TextView android:text="5"
+                android:id="@+id/stampcard_day4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_column="5"
-                android:background="@drawable/item_stats"/>
+                android:layout_marginRight="5dp"
+                android:background="@drawable/item_stats" />
 
-            <TextView android:text=" S "
+            <TextView android:text="6"
+                android:id="@+id/stampcard_day5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_column="6"
-                android:background="@drawable/item_stats"/>
+                android:layout_marginRight="5dp"
+                android:background="@drawable/item_stats" />
 
-            <TextView android:text=" U "
+            <TextView android:text="7"
+                android:id="@+id/stampcard_day6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_column="7"
                 android:background="@drawable/item_stats" />
 
         </TableRow>
