--- a/app/src/main/res/layouts/main/layout/main_fragment_stats.xml
+++ b/app/src/main/res/layouts/main/layout/main_fragment_stats.xml
@@ -268,6 +268,7 @@
                 android:id="@+id/stampcard_day0"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:tag="1"
                 android:layout_marginRight="5dp"
                 android:background="@drawable/item_stats" />
 
