--- a/app/src/main/res/layout/habit_timer.xml
+++ b/app/src/main/res/layout/habit_timer.xml
@@ -13,5 +13,14 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
+    <Button
+        android:id="@+id/timer_to_back_home"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/countdown_text"
+        android:layout_centerHorizontal="true"
+        android:visibility="invisible"
+        android:text=" Go Back Home :) " />
+
 
 </RelativeLayout>
