--- a/app/src/main/res/layouts/habit/layout/habit_type_choose.xml
+++ b/app/src/main/res/layouts/habit/layout/habit_type_choose.xml
@@ -38,11 +38,12 @@
 
     </LinearLayout>
 
-    <android.support.constraint.ConstraintLayout
+    <LinearLayout
         android:id="@+id/habit_choose_physique_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
+        android:orientation="vertical"
+        android:gravity="center"
         android:layout_marginLeft="100dp"
         android:layout_marginRight="100dp"
         android:layout_marginVertical="20dp"
@@ -51,36 +52,29 @@
 
         <ImageButton
             android:id="@+id/habit_choose_physique"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:scaleType="fitXY"
-            app:layout_constraintDimensionRatio="H,1:1"
-
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:src="@drawable/habit_physique_icon"
-            android:background="?attr/selectableItemBackground" />
+            android:src="@drawable/habit_physique_icon" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            app:layout_constraintTop_toBottomOf="@id/habit_choose_physique"
-            app:layout_constraintRight_toRightOf="@id/habit_choose_physique"
             android:layout_marginTop="10dp"
             android:text="@string/habit_physique"
             android:fontFamily="@font/montserrat_bold"
             android:textSize="@dimen/textview_middle_size"/>
 
-    </android.support.constraint.ConstraintLayout>
+    </LinearLayout>
 
-    <android.support.constraint.ConstraintLayout
+    <LinearLayout
         android:id="@+id/habit_choose_mind_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
+        android:orientation="vertical"
+        android:gravity="center"
         android:layout_marginLeft="100dp"
         android:layout_marginRight="100dp"
         android:background="@drawable/item_habit"
@@ -88,29 +82,21 @@
 
         <ImageButton
             android:id="@+id/habit_choose_mind"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:scaleType="fitXY"
-            app:layout_constraintDimensionRatio="H,1:1"
-
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:src="@drawable/habit_mind_icon"
-            android:background="?attr/selectableItemBackground" />
+            android:src="@drawable/habit_mind_icon" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            app:layout_constraintTop_toBottomOf="@id/habit_choose_mind"
-            app:layout_constraintRight_toRightOf="@id/habit_choose_mind"
             android:layout_marginTop="10dp"
             android:text="@string/habit_mind"
             android:fontFamily="@font/montserrat_bold"
-            android:textSize="@dimen/textview_middle_size"/>
+            android:textSize="@dimen/textview_middle_size" />
 
-    </android.support.constraint.ConstraintLayout>
+    </LinearLayout>
 
 </LinearLayout>
