--- a/app/src/main/res/layouts/main/layout/main_fragment_home.xml
+++ b/app/src/main/res/layouts/main/layout/main_fragment_home.xml
@@ -105,9 +105,10 @@
                 android:id="@+id/add_habit_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="visible"
+                android:gravity="center"
 
                 android:background="@drawable/item_habit"
+                android:stateListAnimator="@null"
                 android:text="@string/habit_add"
                 android:textSize="@dimen/textview_big_0_size" />
 
