--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,9 +5,9 @@
         <item name="android:windowDisablePreview">true</item>
         <!-- Customize your theme here. -->
         <item name="android:fontFamily">@font/montserrat_regular</item>
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/background_light</item>
+        <item name="colorPrimaryDark">@color/background_heavy</item>
+        <item name="colorAccent">@color/accent_dark_blue</item>
     </style>
 
 </resources>
