--- a/app/src/main/res/layouts/main/layout/home.xml
+++ b/app/src/main/res/layouts/main/layout/home.xml
@@ -9,7 +9,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_above="@id/main_nav_view"
         android:layout_marginBottom="10dp"
         >
