--- a/app/src/main/res/layouts/main/layout/main_fragment_stats.xml
+++ b/app/src/main/res/layouts/main/layout/main_fragment_stats.xml
@@ -249,6 +249,7 @@
     <TableLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:layout_marginVertical="30dp"
         android:gravity="center">
 
         <TableRow
