--- a/app/src/main/res/layouts/onboarding/layout/ob_welcome_screen.xml
+++ b/app/src/main/res/layouts/onboarding/layout/ob_welcome_screen.xml
@@ -49,9 +49,7 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="60dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp">
+        android:layout_marginHorizontal="60dp" >
 
         <ImageButton
             android:id="@+id/welcome_screen_button"
